--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="Style/port.css">
 </head>
 <body>
+    <!-- Part-1 -->
   <header class="header">
     <a href="#" class="logo">Kaiso.</a>
 
@@ -18,5 +19,22 @@
       <a href="#">Contact</a>
     </nav>
   </header>
+
+    <!-- Part-2 -->
+
+  <section class="home">
+    <div class="home-content">
+      <h1>Hey there, I'm Kaiso</h1>
+      <h3>Frontend Web Developer</h3>
+      <p>
+        A front-end developer is a type of software developer who specializes in creating and designing the user interface (UI) and user experience (UX) of websites and web applications. The primary responsibility of a front-end developer is to ensure that the visual and interactive aspects of a website or application are user-friendly, aesthetically pleasing, and functionally efficient. I am that.
+      </p>
+      <div class="btn-box">
+        <a href="#">Hire Me</a>
+        <a href="#">Love to talk</a>
+      </div>
+    </div>
+  </section>
+
 </body>
-</html>
+</html> 
