--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="Style/port.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!-- Part-1 -->
@@ -34,7 +35,16 @@
         <a href="#">Love to talk</a>
       </div>
     </div>
+      <!--Part 3-->
+    <div class="home-sci">
+      <a href="https://www.facebook.com/bein.ordenado.9/" target="_blank"><i class='bx bxl-meta'></i></a>
+      <a href="https://www.instagram.com/maanjim___/" target="_blank"><i class='bx bxl-instagram'></i></i></a>
+      <a href="https://twitter.com/Sp0ngebb_" target="_blank"><i class='bx bxl-twitter'></i></a>
+      <a href="https://www.linkedin.com/in/taanjuzc/" target="_blank"><i class='bx bxl-linkedin' ></i></i></a>
+    </div>  
+      <!--end of part 3-->
   </section>
+
 
 </body>
 </html> 
